# spectec

./: .gitignore
.github/workflows/: ci-spectec.yml
core/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
core/_static/: documentation_options.js
core/appendix/: algorithm.html  changes.html  custom.html  embedding.html  implementation.html  index-instructions.html  index-rules.html  index-types.html  index.html  profiles.html  properties.html
core/binary/: conventions.html  index.html  instructions.html  modules.html  types.html  values.html
core/exec/: conventions.html  index.html  instructions.html  modules.html  numerics.html  runtime.html  types.html  values.html
core/intro/: index.html  introduction.html  overview.html
core/syntax/: conventions.html  index.html  instructions.html  modules.html  types.html  values.html
core/text/: conventions.html  index.html  instructions.html  lexical.html  modules.html  types.html  values.html
core/valid/: conventions.html  index.html  instructions.html  matching.html  modules.html  types.html
document/core/exec/: instructions.rst
js-api/: index.html
metadata/code/: binary.html  searchindex.js  text.html
spectec/: .gitignore  .ocamlformat  Makefile  count-loc.sh  dune-project  flake.nix  interp.sh  lakefile.lean  proofscoqil.v
spectec/coq/: .CoqMakefile.d  .gitignore  CoqMakefile.conf  Makefile  README.md  _CoqProject
spectec/minispec/: 1-syntax.watsup  2-aux.watsup  3-typing.watsup  4-runtime.watsup  5-numerics.watsup  6-reduction.watsup  miniwasm.watsup
spectec/spec/: 1-syntax.watsup  2-aux.watsup  3-typing.watsup  4-runtime.watsup  7-agda.watsup  7-module.watsup  minispec.patch
spectec/src/: dune
spectec/src/el/: dune  (+10 more)
spectec/test-agda/: Makefile  TEST.md  dune  minispec.agda  output  run.sh
spectec/test-coq/: Makefile  coq_output.html  coq_output.v  dune  dune-project  index.html  test-coq.opam
spectec/test-coq/theories/: dune  generatedcode.v  helper_lemmas.v  helper_tactics.v  type_preservation.v  type_progress.v  typing_lemmas.v
spectec/test-frontend/: PASSES.md  TEST.md  dune
spectec/test-haskell/: SpecTec.hs  TEST.md  dune
spectec/test-latex/: Makefile  TEST.md  dune  spec-gen-wasm-2.0.tex  spec-gen-wasm-3.0.tex  spec-gen.include.tex  spec-gen.tex
spectec/test-lean4/: SpecTec.lean  TEST.md  dune  run-lean.sh
spectec/test-middlend/: TEST.md  dune
spectec/test-parser/: Makefile  TEST.md  test.watsup
spectec/test-prose/: Makefile.test  TEST.md  dune
spectec/test-splice/: TEST.md  spec-latex.in.tex  spec-sphinx.in.rst
spectec/tutorial/: .gitignore  0-aux.watsup  1-syntax.watsup  2-runtime.watsup  3-numerics.watsup  3-typing.watsup  4-reduction.watsup  4-runtime.watsup  5-runtime-aux.watsup  8-reduction.watsup  9-module.watsup  Makefile  tutorial.tex  tutorial_spliced.tex
web-api/: index.html
(+173 files in other folders)
