(rule
  (targets current.agda current.output)
  (deps
    (file ../watsup)
    (glob_files ../spec/*)
  )
  (action
    (progn
      (with-outputs-to current.output (run ./run.sh current.agda))
    )
  )
)

(rule
 (alias runtest)
 (action (diff minispec.agda current.agda))
)
(rule
 (alias runtest)
 (action (diff output current.output))
)
