(rule
  (targets stderr.current SpecTec.lean.current)
  (deps
    (file ../src/exe-watsup/main.exe)
    (glob_files ../spec/*.watsup)
  )
  (action
    (progn
      (write-file SpecTec.lean.current "not generated")
      (with-stderr-to stderr.current (run %{deps} --lean4 -o SpecTec.lean.current))
    )
  )
)

(rule
 (alias   runtest)
 (action (diff stderr.expected stderr.current))
)
(rule
 (alias   runtest)
 (action (diff SpecTec.lean SpecTec.lean.current))
)
